--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -3,13 +3,16 @@ $large-breakpoint: 64em !default;
 $medium-breakpoint: 42em !default;
 
 // Headers
+//$header-heading-color: #fff !default;
+//$header-bg-color: #159957 !default;
+//$header-bg-color-secondary: #155799 !default;
+
 $header-heading-color: #fff !default;
-$header-bg-color: #159957 !default;
-$header-bg-color-secondary: #155799 !default;
+$header-bg-color: #991557 !default;
+$header-bg-color-secondary: #991557 !default;
 
 // Text
-//$section-headings-color: #159957 !default;
-$section-headings-color: #991557 !default;
+$section-headings-color: #159957 !default;
 $body-text-color: #606c71 !default;
 $body-link-color: #1e6bb8 !default;
 $blockquote-text-color: #819198 !default;
