--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -5,11 +5,11 @@ $medium-breakpoint: 42em !default;
 // Headers
 //$header-heading-color: #fff !default;
 //$header-bg-color: #159957 !default;
-//$header-bg-color-secondary: #155799 !default;
+//$header-bg-color-secondary: #155799 !default; #991557
 
 $header-heading-color: #fff !default;
-$header-bg-color: #159957 !default; // Updated
-$header-bg-color-secondary: #991557 !default; // Updated
+$header-bg-color: #6F5F90 !default; // Updated
+$header-bg-color-secondary: #758EB7 !default; // Updated
 
 // Text
 $section-headings-color: #991557 !default; // Before: #159957
