--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -8,8 +8,8 @@ $medium-breakpoint: 42em !default;
 //$header-bg-color-secondary: #155799 !default; #991557
 
 $header-heading-color: #fff !default;
-$header-bg-color: #ffe29a !default; // Updated
-$header-bg-color-secondary: #46375c !default; // Updated
+$header-bg-color: #46375c !default; // Updated
+$header-bg-color-secondary: #ffd670 !default; // Updated 
 
 // Text
 $section-headings-color: #991557 !default; // Before: #159957
