--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -8,8 +8,8 @@ $medium-breakpoint: 42em !default;
 //$header-bg-color-secondary: #155799 !default; #991557
 
 $header-heading-color: #fff !default;
-$header-bg-color: #434b4e !default; // Updated
-$header-bg-color-secondary: #94121a !default; // Updated 
+$header-bg-color: #c23b41 !default; // Updated
+$header-bg-color-secondary: #aa1d23 !default; // Updated 
 
 // Text
 $section-headings-color: #991557 !default; // Before: #159957
