--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -12,7 +12,7 @@ $header-bg-color: #c23b41 !default; // Updated
 $header-bg-color-secondary: #aa1d23 !default; // Updated 
 
 // Text
-$section-headings-color: #991557 !default; // Before: #159957
+$section-headings-color: #aa1d23 !default; // Before: #159957
 $body-text-color: #606c71 !default;
 $body-link-color: #1e6bb8 !default;
 $blockquote-text-color: #819198 !default;
